fix footer alignment issue

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -111,6 +111,10 @@
     list-style: none;
     margin-left: 0;
     text-align: center;
+
+    @include media-query($on-palm) {
+        text-align: left;
+    }
 }
 
 .footer-col-wrapper {
